Doc improvements squish
* Fix more broken links
* Move FAQ last
* Fold all install-y content into `install.md`
* Fix header levels
* Fold `download.md` contents into `install.md`
* Fix cross-references
* Ordered navigation
* Add logo to docs
* Make doc pages more consistent

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,29 @@
 site_name: OpenBLAS
 theme:
   name: material
+  logo: logo.svg
+  favicon: logo.svg
+  palette:
+    primary: grey
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - toc:
+      toc_depth: 4
+nav:
+  - index.md
+  - install.md
+  - user_manual.md
+  - extensions.md
+  - developers.md
+  - build_system.md
+  - distributing.md
+  - ci.md
+  - machine_list.md
+  - todo.md
+  - ecosystem.md
+  - publications.md
+  - mailing_list.md
+  - donate.md
+  - faq.md
