LoongArch: Small matrix opt

--- a/Makefile.system
+++ b/Makefile.system
@@ -269,6 +269,7 @@ else ifeq ($(ARCH), power)
 SMALL_MATRIX_OPT = 1
 BUILD_BFLOAT16 = 1
 endif
+SMALL_MATRIX_OPT = 1
 ifeq ($(SMALL_MATRIX_OPT), 1)
 CCOMMON_OPT += -DSMALL_MATRIX_OPT
 endif
