--- a/.github/workflows/arm64_graviton.yml
+++ b/.github/workflows/arm64_graviton.yml
@@ -7,6 +7,7 @@ permissions:
 
 jobs:
   build:
+    if: "github.repository == 'OpenMathLib/OpenBLAS'"
     runs-on: "cirun-aws-runner-graviton--${{ github.run_id }}"
 
     strategy:
