--- a/.github/workflows/c910v.yml
+++ b/.github/workflows/c910v.yml
@@ -7,6 +7,7 @@ permissions:
 
 jobs:
   TEST:
+    if: "github.repository == 'OpenMathLib/OpenBLAS'"
     runs-on: ubuntu-latest
     env:
       xuetie_toolchain: https://occ-oss-prod.oss-cn-hangzhou.aliyuncs.com/resource//1663142514282
