--- a/.github/workflows/mips64.yml
+++ b/.github/workflows/mips64.yml
@@ -7,6 +7,7 @@ permissions:
 
 jobs:
   TEST:
+    if: "github.repository == 'OpenMathLib/OpenBLAS'"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
