--- a/.github/workflows/arm64_graviton.yml
+++ b/.github/workflows/arm64_graviton.yml
@@ -1,6 +1,14 @@
 name: arm64 graviton cirun
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - develop
+      - release-**
+  pull_request:
+    branches:
+      - develop
+      - release-**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
