--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,6 +8,8 @@ task:
   - export PATH=/opt/homebrew/bin:$PATH
   - export LDFLAGS="-L/opt/homebrew/lib"
   - export CPPFLAGS="-I/opt/homebrew/include"
+  - mkdir build
+  - cd build
   - cmake CC=clang FC=gfortran-13 ..
   - make -j 4
   
