rename and fix reference to removed variable

--- a/.github/workflows/apple_m.yml
+++ b/.github/workflows/apple_m.yml
@@ -1,4 +1,4 @@
-name: continuous build
+name: apple m
 
 on: [push, pull_request]
 
@@ -60,8 +60,7 @@ jobs:
           key: ccache-${{ runner.os }}-${{ matrix.build }}-${{ matrix.fortran }}-${{ github.ref }}-${{ github.sha }}
           # Restore a matching ccache cache entry. Prefer same branch and same Fortran compiler.
           restore-keys: |
-            ccache-${{ runner.os }}-${{ matrix.build }}-${{ matrix.fortran }}-${{ github.ref }}
-            ccache-${{ runner.os }}-${{ matrix.build }}-${{ matrix.fortran }}
+            ccache-${{ runner.os }}-${{ matrix.build }}-${{ github.ref }}
             ccache-${{ runner.os }}-${{ matrix.build }}
 
       - name: Configure ccache
