Add option FIXED_LIBNAME to suppress versioning and softlinking

--- a/Makefile.system
+++ b/Makefile.system
@@ -1704,6 +1704,10 @@ LIBNAME_P	= $(LIBPREFIX)p$(REVISION)_p.$(LIBSUFFIX)
 endif
 endif
 
+ifeq ($(FIXED_LIBNAME),1)
+	LIBNAME = $(LIBPREFIX).$(LIBSUFFIX)
+	LIBNAME_P = $(LIBPREFIX)_p.$(LIBSUFFIX)
+endif
 
 LIBDLLNAME   = $(LIBPREFIX).dll
 IMPLIBNAME   = lib$(LIBNAMEBASE).dll.a
