--- a/Makefile.system
+++ b/Makefile.system
@@ -1705,8 +1705,8 @@ endif
 endif
 
 ifeq ($(FIXED_LIBNAME),1)
-	LIBNAME = $(LIBPREFIX).$(LIBSUFFIX)
-	LIBNAME_P = $(LIBPREFIX)_p.$(LIBSUFFIX)
+	LIBNAME = $(LIBPREFIX)$(LIBSONAMEBASE)$(LIBNAMESUFFIX).$(LIBSUFFIX)
+	LIBNAME_P = $(LIBPREFIX)$(LISOBNAMEBASE)$(LIBNAMESUFFIX)_p.$(LIBSUFFIX)
 endif
 
 LIBDLLNAME   = $(LIBPREFIX).dll
