--- a/.github/workflows/apple_m.yml
+++ b/.github/workflows/apple_m.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         build: [cmake, make]
-        fortran: [gfortran, flang-new]
+        fortran: [gfortran, /opt/homebrew/opt/llvm/bin/flang-new]
         openmp: [0, 1]
         ilp64: [0, 1]
         
