Fix LAPACK unit testing build issues.  Limit AIX builds to 32 threads (to eliminate failures of some systems).

--- a/Makefile.system
+++ b/Makefile.system
@@ -1181,7 +1181,7 @@ ifeq ($(F_COMPILER), IBM)
 CCOMMON_OPT += -DF_INTERFACE_IBM
 FEXTRALIB += -lxlf90
 ifeq ($(C_COMPILER), $(filter $(C_COMPILER),GCC CLANG))
-FCOMMON_OPT += -qextname
+FCOMMON_OPT += -qextname -qzerosize
 endif
 # FCOMMON_OPT	+= -qarch=440
 ifdef BINARY64
