Avoid overriding the global USE_GEMM3M

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,9 +22,7 @@ if (BUILD_COMPLEX16)
 	list (APPEND OpenBLAS_Tests zblat1 zblat2 zblat3)
 endif()
 
-set (USE_GEMM3M 0)
-if (${ARCH} MATCHES x86|x86_64|ia64|mips)
-	set(USE_GEMM3M 1)
+if (USE_GEMM3M)
 	if (BUILD_COMPLEX)
 		list (APPEND OpenBLAS_Tests cblat3_3m)
 	endif ()
